# PythonCFD_J

./: .gitignore  A-LDU_scalar.py  A-LDU_scalar_ver1.py  Burgers_LDU.py  Burgers_LDU_internal_itr.py  Euler_FDS.py  Euler_FDS_implicit.py  Euler_FDS_implicit_HO.py  MacCormack.py  README.md  pyproject.toml  test.py
